--- a/templates/misc/koros/koro-vibration.twig
+++ b/templates/misc/koros/koro-vibration.twig
@@ -2,9 +2,9 @@
 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="100%" height="85" fill="currentColor">
   <defs>
     <pattern id="{{ korosId }}" x="0" y="0" width="106" height="85" patternUnits="userSpaceOnUse">
-      <path
+      <polygon
           transform="scale(5.3)"
-          d="M20,800V0c-2.3,5.5-8.7,8.1-14.3,5.7C3.1,4.7,1.2,2.6,0,0v800H20z"
+          points="0,800 20,800 20,0 9.8,10.1 0,0 "
       />
     </pattern>
   </defs>
