UHF-114 Add styles and dom for heros without images, with image on the right, with image on the left and with image on the center

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -4,8 +4,9 @@ body {
 }
 
 body {
-  font-family: $base-font-family;
-  line-height: $lineheight-l;
+  background-color: $body-bg-color;
   display: flex;
   flex-direction: column;
+  font-family: $base-font-family;
+  line-height: $lineheight-l;
 }
