--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -1,6 +1,7 @@
 h1 {
   font-size: $fontsize-heading-xl;
-  line-height: $lineheight-m;
+  font-weight: $font-weight-regular;
+  line-height: $lineheight-s;
 }
 
 h2 {
