--- a/src/scss/_hds.scss
+++ b/src/scss/_hds.scss
@@ -6,6 +6,7 @@
 
 // Import HDS Tokens.
 @import "~hds-design-tokens/lib/all.css";
+@import "~hds-design-tokens/lib/spacing/spacing.css";
 
 @import "~hds-core/lib/icons/icon.css";
 @import "~hds-core/lib/icons/all.css";
