Hide Page title block based on node having Hero enabled. Added responsive image styles to hero paragraph template.

--- a/templates/paragraphs/paragraph--hero.html.twig
+++ b/templates/paragraphs/paragraph--hero.html.twig
@@ -59,10 +59,10 @@
       {% block container_content %}
         <div class="hero__text-content">
           <h1 class="hero__title">
-            {{ content.	field_hero_title }}
+            {{ content.field_hero_title }}
           </h1>
           <div class="hero__description">
-            {{ content.	field_hero_desc }}
+            {{ content.field_hero_desc }}
           </div>
           <div class="hero__cta">
             {{ content.field_hero_cta }}
@@ -71,10 +71,27 @@
       {% endblock %}
     {% endembed %}
 
-    {% if design == "with-image-right" or design == "with-image-left" or design == "with-image-bottom" or design == "background-image" or design == "diagonal" %}
+    {% if
+      design == "with-image-right" or
+      design == "with-image-left" or
+      design == "with-image-bottom" or
+      design == "background-image" or
+      design == "diagonal"
+    %}
+      {% set image_id = content.field_hero_image[0]['#media'].id %}
+      {% set image_style = 'hero__background' %}
+
+      {% if design == "with-image-right" or design == "with-image-left" %}
+        {% set image_style = 'hero__left_right' %}
+      {% elseif design == "with-image-bottom" %}
+        {% set image_style = 'hero__bottom' %}
+      {% elseif design == "diagonal" %}
+        {% set image_style = 'hero__diagonal' %}
+      {% endif %}
+
       <div class="hero__image-container">
         {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: true } %}
-        {{ content.field_hero_image }}
+        {{ drupal_image(image_id, image_style, responsive=true) }}
       </div>
     {% endif %}
     {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: false } %}
