--- a/templates/misc/koros/koro-vibration.twig
+++ b/templates/misc/koros/koro-vibration.twig
@@ -1,12 +1,11 @@
 {% set korosId = 'koros' ~ random() %}
-<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="100%" height="85" fill="currentColor">
+<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="100%" height="50" fill="currentColor">
   <defs>
-    <pattern id="{{ korosId }}" x="0" y="0" width="106" height="85" patternUnits="userSpaceOnUse">
+    <pattern id="{{ korosId }}" x="0" y="0" width="67" height="50" patternUnits="userSpaceOnUse">
       <polygon
-          transform="scale(5.3)"
-          points="0,800 20,800 20,0 10,10 0,0 "
+        points="67 50 67 33.86 33.5 0 0 33.86 0 33.86 0 50 67 50"
       />
     </pattern>
   </defs>
-  <rect fill="url(#{{ korosId }})" width="100%" height="85" />
+  <rect fill="url(#{{ korosId }})" width="100%" height="50" />
 </svg>
