--- a/templates/misc/koros/koro-wave.twig
+++ b/templates/misc/koros/koro-wave.twig
@@ -1,12 +1,9 @@
 {% set korosId = 'koros' ~ random() %}
-<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="100%" height="85" fill="currentColor">
+<svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="100%" height="50" fill="currentColor">
   <defs>
-    <pattern id="{{ korosId }}" x="0" y="0" width="106" height="85" patternUnits="userSpaceOnUse">
-      <polygon
-          transform="scale(5.3)"
-          points="0,800 20,800 20,0 9.8,10.1 0,0 "
-      />
+    <pattern id="{{ korosId }}" x="0" y="0" width="67" height="50" patternUnits="userSpaceOnUse">
+      <path d="M33.49,23.34C27.94,9.64,15.06,0,0,0H0V50H67V.1C52,.08,39.07,9.65,33.49,23.34Z"/>
     </pattern>
   </defs>
-  <rect fill="url(#{{ korosId }})" width="100%" height="85" />
+  <rect fill="url(#{{ korosId }})" width="100%" height="50" />
 </svg>
