--- a/templates/paragraphs/paragraph--hero.html.twig
+++ b/templates/paragraphs/paragraph--hero.html.twig
@@ -104,7 +104,12 @@
         {% endif %}
 
         <div class="hero__image-container">
-          {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: true } %}
+          {% if design == "diagonal" and koro == "wave" %}
+            {% include '@hdbt/misc/koro.twig' with {koro: 'wave--negative', flip: true } %}
+          {% else %}
+            {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: true } %}
+          {% endif %}
+
           {{ drupal_image(image_id, image_style, responsive=true) }}
         </div>
       {% endif %}
