UHF-22 Style the breadcrumb and make the functionality work on mobile

--- a/src/scss/components/misc/_system-messages.scss
+++ b/src/scss/components/misc/_system-messages.scss
@@ -4,10 +4,18 @@
 //
 .hds-notification {
   margin-bottom: $spacing;
+
+  &:first-child {
+    margin-top: $spacing;
+  }
 }
 
 .hds-notification__label {
   .icon {
     margin-right: $spacing-half;
   }
+}
+
+.messages__container {
+  padding-bottom: 0;
 }
