--- a/templates/layout/region.html.twig
+++ b/templates/layout/region.html.twig
@@ -13,7 +13,11 @@
  */
 #}
 {% if content %}
-  <div{{ attributes.addClass(region|clean_class) }}>
-    {{ content }}
-  </div>
+  {% embed "@hdbt/misc/container.twig" with {container_element: region} %}
+    {% block container_content %}
+      <div{{ attributes.addClass(region|clean_class) }}>
+        {{ content }}
+      </div>
+    {% endblock container_content %}
+  {% endembed %}
 {% endif %}
