--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -9,3 +9,13 @@ h2 {
   line-height: $lineheight-m;
   margin: $spacing 0;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  hyphens: auto;
+  word-break: break-word;
+}
