UHF-22 Style the active item in local tasks

--- a/src/scss/components/navigation/_local-tasks.scss
+++ b/src/scss/components/navigation/_local-tasks.scss
@@ -36,6 +36,7 @@
     padding: $spacing-quarter;
     text-decoration: none;
 
+    &.is-active,
     &:hover {
       border-bottom: 4px solid $color-black-90;
       padding-bottom: 0;
