Added language switcher functionality.

--- a/templates/misc/logo.twig
+++ b/templates/misc/logo.twig
@@ -3,13 +3,13 @@
   {% set logo_class = '' %}
   {% set logo_alt = 'Helsinki' %}
 
-  {% if current_language == 'sv' %}
+  {% if current_langcode == 'sv' %}
     {% set logo = 'helsinki-sv' %}
     {% set logo_class = 'icon--logo-sv' %}
     {% set logo_alt = 'Helsingfors' %}
   {% endif %}
 
-  {% if current_language == 'ru' %}
+  {% if current_langcode == 'ru' %}
     {% set logo = 'helsinki-ru' %}
     {% set logo_class = 'icon--logo-ru' %}
     {% set logo_alt = 'Xeльcинки' %}
